--- a/projekt/zoom/style.css
+++ b/projekt/zoom/style.css
@@ -87,4 +87,12 @@ button {
 	border: 2px solid white;
 	background-color: black;
 	box-shadow: 0 0 15px black;
+
+	transition-property: all;
+	text-decoration: 0s;
+	transition-timing-function: ease;
+	transition-delay: 0s;
+	transition: all 0s ease 0s;
+	transition: background-color .3s, box-shadow .5s;
 }
+
