--- a/projekt/responsywna/style.css
+++ b/projekt/responsywna/style.css
@@ -39,6 +39,13 @@ body {
 	text-transform: uppercase;
 	color: #09f;
 }
+
+.section-title {
+	margin-bottom: 20px;
+	text-transform: uppercase;
+	text-align: center;
+}
+
 /* nawigacja */
 
 nav {
@@ -67,6 +74,47 @@ nav {
 	display: none;
 }
 
+main {
+	margin: 60px 0;
+}
+
+/* o nas */
+.about-us-info {
+	margin-bottom: 9px;
+}
+
+/* produkty */
+
+.products {
+	margin: 60px auto;
+}
+.products h3 {
+	text-transform: uppercase;
+}
+
+.product {
+	position: relative;
+	height: 300px;
+	background-size: cover;
+	background-position: center;
+	text-align: center;
+}
+
+.first-product {
+	background-image: url(./img/chilidren-small.jpg);
+}
+
+.second-product {
+	background-image: url(./img/keyboard-small.jpg);
+}
+
+.third-product {
+	background-image: url(./img/woman-small.jpg);
+}
+
+.fourth-product {
+	background-image: url(./img/laptop-small.jpg);
+}
 /* header */
 
 .header {
@@ -76,6 +124,8 @@ nav {
 	background-size: cover;
 	background-position: center;
 }
+
+/* main */
 
 @media (min-width: 768px) {
 	.burger-icon {
@@ -123,5 +173,4 @@ nav {
 	.hero-text p {
 		font-size: 20px;
 	}
-
 }
