--- a/projekt/responsywna/style.css
+++ b/projekt/responsywna/style.css
@@ -5,7 +5,14 @@
 }
 
 body {
+	scroll-margin-top: 60px;
 	font-family: 'Open Sans', sans-serif;
+}
+section {
+	scroll-margin-top: 80px;
+}
+html{
+	scroll-behavior: smooth;
 }
 
 .wrapper {
@@ -18,7 +25,7 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 .hero-text {
@@ -49,10 +56,13 @@ body {
 /* nawigacja */
 
 nav {
+	position: sticky;
+	top: 0;
 	height: 60px;
 	line-height: 60px;
 	background-color: #ddd;
 	text-align: center;
+	z-index: 10;
 }
 
 .burger-icon {
@@ -80,7 +90,8 @@ main {
 
 /* o nas */
 .about-us-info {
-	margin-bottom: 9px;
+	margin-bottom: 10px;
+	padding: 0 20px;
 }
 
 /* produkty */
@@ -88,8 +99,9 @@ main {
 .products {
 	margin: 60px auto;
 }
-.products h3 {
+.product h3 {
 	text-transform: uppercase;
+	transition: transform 0.3s;
 }
 
 .product {
@@ -104,8 +116,12 @@ main {
 	background-image: url(./img/chilidren-small.jpg);
 }
 
+.product:hover h3 {
+	transform: scale(1.6);
+}
 .second-product {
 	background-image: url(./img/keyboard-small.jpg);
+	cursor: pointer;
 }
 
 .third-product {
@@ -125,8 +141,22 @@ main {
 	background-position: center;
 }
 
-/* main */
+.contact {
+	text-align: center;
+}
 
+.contact h3 {
+	margin: 20px 5px;
+	text-transform: uppercase;
+}
+
+/* footer */
+
+footer {
+	padding: 30px 10px;
+	text-align: center;
+	background-color: #ddd;
+}
 @media (min-width: 768px) {
 	.burger-icon {
 		display: none;
@@ -162,6 +192,20 @@ main {
 
 	.hero-text p {
 		font-size: 18px;
+	}
+
+	.product h3 {
+		font-size: 24px;
+	}
+}
+
+@media (min-width: 992px) {
+	.products-box {
+		font-size: 0px;
+	}
+	.product {
+		display: inline-block;
+		width: 50%;
 	}
 }
 
