--- a/projekt2/sass/styl6.scss
+++ b/projekt2/sass/styl6.scss
@@ -38,3 +38,11 @@ p {
     height: 150px;
     background-color: royalblue;
 }
+
+// [href='apple.com'] {
+//     color: gold;
+// }
+
+p[class*'test']{
+    color: gold;
+}
