--- a/projekt2/css/main.css
+++ b/projekt2/css/main.css
@@ -51,4 +51,9 @@ div {
 
 .even {
   background-color: deepskyblue;
+}
+
+.one {
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
 }/*# sourceMappingURL=main.css.map */
