--- a/projekt2/sass/style12.scss
+++ b/projekt2/sass/style12.scss
@@ -59,4 +59,8 @@ section {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
+   
+    align-self: center;
+    align-self: flex-start;
+    align-self: flex-end;
 }
