--- a/projekt2/css/style12.css
+++ b/projekt2/css/style12.css
@@ -58,4 +58,7 @@ section {
   flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
+  align-self: center;
+  align-self: flex-start;
+  align-self: flex-end;
 }/*# sourceMappingURL=style12.css.map */
