--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -1,16 +1,10 @@
-nav {
-  padding: 20px;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-nav .test {
-  padding: 10px;
-}
-nav ul {
-  list-style: none;
-}
-nav ul li {
-  background-color: red;
-  font-size: 30px;
-}
-nav ul li a {
-  text-decoration: none;
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #444;
 }/*# sourceMappingURL=style.css.map */
