--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -1,31 +1,65 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 body {
+  position: relative;
   font-family: "Montserrat", sans-serif;
   background-color: #444;
-  position: relative;
 }
 
 nav {
   text-transform: uppercase;
 }
-nav .nav-link {
+nav a,
+nav i {
   color: #fff;
 }
-nav .nav-link:hover {
+nav a:hover {
   color: #039dff;
+}
+nav .fa-bars {
+  padding: 10px;
 }
 nav .navbar-brand {
   font-weight: bold;
-  color: #fff;
-}
-nav .navbar-brand:hover {
-  color: #039dff;
 }
 nav .active {
   color: #039dff;
+}
+
+.second-name {
+  color: #039dff;
+}
+
+header {
+  color: #fff;
+}
+header h1 {
+  text-transform: uppercase;
+}
+header .hero-img {
+  position: relative;
+  height: 100vh;
+  background-image: url("/projekt2/strona/img/playstation-1845880_640.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+header .hero-shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+header .hero-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
 }/*# sourceMappingURL=style.css.map */
