--- a/projekt2/strona/sass/style.scss
+++ b/projekt2/strona/sass/style.scss
@@ -1,31 +1,73 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+@import 'colors';
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-body{
-    font-family: 'Montserrat', sans-serif;
-    background-color: #444;
-    position: relative;
+
+body {
+	position: relative;
+	font-family: 'Montserrat', sans-serif;
+	background-color: #444;
 }
 
 nav {
-    text-transform: uppercase;
-    .nav-link {
-        color: #fff;
-    }
+	text-transform: uppercase;
 
-    .nav-link:hover {
-        color: #039dff;
-    }
-    .navbar-brand{
-        font-weight: bold;
-        color: #fff;
-    }
-    .navbar-brand:hover{
-        color: #039dff;
-    }
-    .active{
-        color: #039dff;
+	a,
+	i {
+		color: $white;
+	}
+
+	a:hover {
+		color: $blue-color;
+	}
+
+	.fa-bars {
+		padding: 10px;
+	}
+
+	.navbar-brand {
+		font-weight: bold;
+	}
+
+	.active {
+		color: $blue-color;
+	}
+}
+
+.second-name {
+	color: $blue-color;
+}
+
+header {
+	color: $white;
+
+	h1 {
+		text-transform: uppercase;
+	}
+	.hero-img {
+		position: relative;
+		height: 100vh;
+		background-image: url('/projekt2/strona/img/playstation-1845880_640.jpg');
+		background-position: center;
+		background-size: cover;
+		background-attachment: fixed;
+	}
+	.hero-shadow{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+        background-color: rgba(0, 0, 0, .0);
+	}
+    .hero-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
     }
 }
