--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -128,6 +128,23 @@ header .fa-chevron-down {
   color: #039dff;
 }
 
+.aboutus-hero {
+  position: relative;
+  background-image: url("/projekt2/strona/img/technology-small.jpg");
+  background-position: center;
+  background-size: cover;
+  color: #ddd;
+  z-index: 0;
+}
+.aboutus-hero .aboutus-shadow {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -5;
+}
+
 @media (min-width: 375px) {
   header h1 {
     font-size: 36px;
