--- a/projekt2/strona/sass/style.scss
+++ b/projekt2/strona/sass/style.scss
@@ -137,6 +137,24 @@ header {
 	}
 }
 
+.aboutus-hero {
+	position: relative;
+	background-image: url('/projekt2/strona/img/technology-small.jpg');
+	background-position: center;
+	background-size: cover;
+	color: $light-gray;
+    z-index: 0;
+
+	.aboutus-shadow {
+		position: absolute;
+        top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.7);
+        z-index: -5;
+	}
+}
+
 @media (min-width: 375px) {
 	header {
 		h1 {
@@ -159,7 +177,7 @@ header {
 }
 @media (min-width: 992px) {
 	html {
-        scroll-padding-top: 72px;
+		scroll-padding-top: 72px;
 	}
 }
 
