--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -144,6 +144,15 @@ header .fa-chevron-down {
   background-color: rgba(0, 0, 0, 0.7);
   z-index: -5;
 }
+.aboutus-hero .aboutus-hero-item {
+  margin: 10px 0;
+}
+.aboutus-hero .aboutus-hero-item i {
+  font-size: 36px;
+}
+.aboutus-hero .aboutus-hero-item .aboutus-hero-title {
+  font-size: 24px;
+}
 
 @media (min-width: 375px) {
   header h1 {
