--- a/projekt2/strona/sass/style.scss
+++ b/projekt2/strona/sass/style.scss
@@ -143,16 +143,29 @@ header {
 	background-position: center;
 	background-size: cover;
 	color: $light-gray;
-    z-index: 0;
+	z-index: 0;
 
 	.aboutus-shadow {
 		position: absolute;
-        top: 0;
+		top: 0;
 		width: 100%;
 		height: 100%;
 		background-color: rgba(0, 0, 0, 0.7);
-        z-index: -5;
+		z-index: -5;
 	}
+
+	.aboutus-hero-item {
+		margin: 10px 0;
+
+		i {
+			font-size: 36px;
+		}
+
+		.aboutus-hero-title {
+			font-size: 24px;
+		}
+	}
+
 }
 
 @media (min-width: 375px) {
