--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -13,7 +13,7 @@ html {
 body {
   position: relative;
   font-family: "Montserrat", sans-serif;
-  background-color: #444;
+  background-color: #ebecf2;
 }
 
 h2 {
@@ -154,6 +154,161 @@ header .fa-chevron-down {
   font-size: 24px;
 }
 
+.portfolio .carousel-item {
+  position: relative;
+  height: 600px;
+}
+.portfolio .carousel-caption {
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 40px 0;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.portfolio .carousel-indicators {
+  padding-bottom: 20px;
+}
+
+.prices .price-box {
+  margin: 20px 10px;
+  padding: 30px;
+  background-color: #fff;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+  transition: transform 0.3s;
+}
+.prices .price-box h3 {
+  color: #039dff;
+  text-transform: uppercase;
+}
+.prices .price-box span {
+  font-weight: bold;
+}
+.prices .price-box i {
+  padding: 0 5px;
+  font-size: 18px;
+}
+.prices .price-box button {
+  padding: 10px 20px;
+  text-transform: uppercase;
+}
+.prices .price-box .price-tag {
+  font-size: 30px;
+  font-weight: bold;
+}
+.prices .price-box:hover {
+  transform: scale(1.05);
+}
+.prices .price-info {
+  margin-top: 10px;
+}
+.prices .price-info a {
+  text-decoration: none;
+}
+
+.team {
+  position: relative;
+  background-image: url("/projekt2/strona/img/team/meeting-room-828547_1920.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 0;
+}
+.team h2 {
+  color: #ddd;
+}
+.team .team-shadow {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: -5;
+}
+.team .card {
+  transition: transform 0.3s;
+}
+.team .card img {
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.team .card i {
+  padding: 10px;
+}
+.team .card:hover {
+  transform: scale(0.96);
+}
+.team .card-title {
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.team .card-body {
+  height: 160px;
+}
+
+.achievements i {
+  padding: 10px;
+  font-size: 48px;
+  color: #fff;
+  text-shadow: 0 0 5px #000;
+}
+.achievements .achievements-list {
+  padding: 20px 0;
+}
+.achievements .achievement-number {
+  font-size: 22px;
+}
+.achievements .achievement-text {
+  font-size: 13px;
+  text-transform: uppercase;
+}
+
+.contact {
+  position: relative;
+  background-image: url("/projekt2/strona/img/skyline-1869214_1920.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 0;
+}
+.contact .contact-shadow {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 9, 27, 0.8);
+  z-index: -5;
+}
+.contact h2 {
+  color: #ddd;
+  font-weight: bold;
+}
+.contact .underline {
+  background-color: #ddd;
+}
+.contact .contact-us {
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+.contact .contact-us .contact-item {
+  margin: 30px 0;
+}
+.contact .contact-us .contact-item h3 {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.contact .contact-us .contact-item .social-media {
+  font-size: 20px;
+}
+.contact .contact-us .contact-item .social-media a {
+  padding: 10px;
+  color: #fff;
+}
+.contact .contact-us .contact-item .social-media a:hover {
+  color: #ddd;
+}
+
 @media (min-width: 375px) {
   header h1 {
     font-size: 36px;
@@ -171,8 +326,14 @@ header .fa-chevron-down {
   }
 }
 @media (min-width: 992px) {
-  html {
-    scroll-padding-top: 72px;
+  nav {
+    height: 82px;
+  }
+  header .aboutus-hero {
+    background-image: url("/projekt2/strona/img/playstation-1845880_640.jpg");
+  }
+  .prices .price-info {
+    font-size: 28px;
   }
 }
 @media (min-width: 1200px) {
