--- a/projekt2/strona/sass/style.scss
+++ b/projekt2/strona/sass/style.scss
@@ -14,7 +14,7 @@ html {
 body {
 	position: relative;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #444;
+	background-color: $bg-color;
 }
 
 h2 {
@@ -165,9 +165,181 @@ header {
 			font-size: 24px;
 		}
 	}
-
 }
 
+.portfolio {
+	.carousel-item {
+		position: relative;
+		height: 600px;
+	}
+	.carousel-caption {
+		position: absolute;
+		left: 0;
+		right: 0;
+		padding: 40px 0;
+		background-color: rgba(0, 0, 0, 0.8);
+	}
+	.carousel-indicators {
+		padding-bottom: 20px;
+	}
+}
+.prices {
+	.price-box {
+		margin: 20px 10px;
+		padding: 30px;
+		background-color: $white;
+		box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+		transition: transform 0.3s;
+
+		h3 {
+			color: $main-color;
+			text-transform: uppercase;
+		}
+		span {
+			font-weight: bold;
+		}
+
+		i {
+			padding: 0 5px;
+			font-size: 18px;
+		}
+		button {
+			padding: 10px 20px;
+			text-transform: uppercase;
+		}
+		.price-tag {
+			font-size: 30px;
+			font-weight: bold;
+		}
+	}
+	.price-box:hover {
+		transform: scale(1.05);
+	}
+	.price-info {
+		margin-top: 10px;
+		a {
+			text-decoration: none;
+		}
+	}
+}
+.team {
+	position: relative;
+	background-image: url('/projekt2/strona/img/team/meeting-room-828547_1920.jpg');
+	background-size: cover;
+	background-attachment: fixed;
+	z-index: 0;
+
+	h2 {
+		color: $light-gray;
+	}
+
+	.team-shadow {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.8);
+		z-index: -5;
+	}
+
+	.card {
+		transition: transform 0.3s;
+		img {
+			height: 300px;
+			object-fit: cover;
+		}
+
+		i {
+			padding: 10px;
+		}
+	}
+
+	.card:hover {
+		transform: scale(0.96);
+	}
+
+	.card-title {
+		margin-bottom: 20px;
+		text-align: center;
+		text-transform: uppercase;
+	}
+	.card-body {
+		height: 160px;
+	}
+}
+
+.achievements {
+	i {
+		padding: 10px;
+		font-size: 48px;
+		color: $white;
+		text-shadow: 0 0 5px #000;
+	}
+
+	.achievements-list {
+		padding: 20px 0;
+	}
+	.achievement-number {
+		font-size: 22px;
+	}
+	.achievement-text {
+		font-size: 13px;
+		text-transform: uppercase;
+	}
+}
+
+.contact {
+	position: relative;
+	background-image: url('/projekt2/strona/img/skyline-1869214_1920.jpg');
+	background-size: cover;
+	background-attachment: fixed;
+	z-index: 0;
+
+	.contact-shadow {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 9, 27, 0.8);
+		z-index: -5;
+	}
+
+	h2 {
+		color: $light-gray;
+		font-weight: bold;
+	}
+
+	.underline {
+		background-color: $light-gray;
+	}
+
+	.contact-us {
+		display: flex;
+		align-items: center;
+		color: $white;
+
+		.contact-item {
+			margin: 30px 0;
+
+			h3 {
+				margin-bottom: 15px;
+				text-transform: uppercase;
+				letter-spacing: 2px;
+			}
+			.social-media {
+				font-size: 20px;
+				a {
+					padding: 10px;
+					color: $white;
+				}
+
+				a:hover{
+					color: $light-gray;
+				}
+			}
+		}
+	}
+}
 @media (min-width: 375px) {
 	header {
 		h1 {
@@ -189,8 +361,19 @@ header {
 	}
 }
 @media (min-width: 992px) {
-	html {
-		scroll-padding-top: 72px;
+	nav {
+		height: 82px;
+	}
+
+	header {
+		.aboutus-hero {
+			background-image: url('/projekt2/strona/img/playstation-1845880_640.jpg');
+		}
+	}
+	.prices {
+		.price-info {
+			font-size: 28px;
+		}
 	}
 }
 
