--- a/projekt/box/style-box.scss
+++ b/projekt/box/style-box.scss
@@ -1,9 +1,9 @@
 *,
-*::before,
-*::after {
+*::after,
+*::before {
 	box-sizing: border-box;
-	margin: 0;
 	padding: 0;
+	margin: 0;
 }
 
 body {
@@ -14,9 +14,10 @@ body {
 	.header-img {
 		position: relative;
 		height: 300px;
-		background-image: url('/projekt/box/img/mountains-190055_640.jpg');
+		width: auto;
+		background-image: url('/projekt/box/img/góry.jpg');
+		background-position: center;
 		background-size: cover;
-		background-position: 0 50%;
 
 		.header-text {
 			position: absolute;
@@ -24,127 +25,125 @@ body {
 			left: 50%;
 			transform: translate(-50%, -50%);
 			color: white;
-			z-index: 1;
 
-			h1 {
-				font-size: 50px;
-				padding-bottom: 10px;
+			.header-title {
 				letter-spacing: 2px;
-				font-weight: bold;
+				margin-bottom: 10px;
 			}
-			p {
+
+			.header-description {
 				text-transform: uppercase;
 				letter-spacing: 2px;
 			}
 		}
 
-		.header-bg {
-			position: absolute;
+		.header-shadow {
 			height: 100%;
-			width: 100%;
-			background-color: rgba(0, 3, 27, 0.4);
+			background: rgba(0, 0, 0, 0.3);
 		}
 	}
 }
 
 .nav {
-	height: 50px;
-	background-color: #333;
-	text-align: center;
-	line-height: 50px;
+	.nav-space {
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
+		background-color: #333;
 
-	.nav-item {
-		display: inline-block;
+		.nav-item {
+			.nav-link {
+				padding: 0 50px;
+				letter-spacing: 1px;
+				font-weight: bold;
+				text-transform: uppercase;
+				text-decoration: none;
+				color: white;
+				transition: color 0.3s;
+			}
 
-		a {
-			padding: 0 50px;
-			color: white;
-			text-transform: uppercase;
-			text-decoration: none;
-			font-weight: bold;
-			letter-spacing: 2px;
-			transition: color 0.3s;
-		}
-
-		a:hover {
-			color: royalblue;
+			.nav-link:hover {
+				color: royalblue;
+			}
 		}
 	}
 }
 
 .main {
-	margin: 50px auto;
-	width: 1200px;
-
+	margin: 50px 70px;
 	text-align: center;
-	h2 {
-		margin-bottom: 30px;
-		text-transform: uppercase;
-		text-align: center;
-	}
+
+
+		h2 {
+			margin-bottom: 60px;
+			text-transform: uppercase;
+		}
 
 	.main-img {
 		position: relative;
-		margin: 40px 0;
 		height: 300px;
 		background-attachment: fixed;
+		background-image: url('/projekt/box/img/kawa.jpg');
 		background-position: center;
+		background-size: cover;
 		border-top-left-radius: 50px;
 		border-bottom-right-radius: 50px;
 		overflow: hidden;
 
-		.main-bg {
+		.main-shadow {
 			position: absolute;
 			bottom: 0;
-			height: 45%;
+			height: 100px;
 			width: 100%;
-			background-color: rgba(0, 0, 0, 0.8);
+			background: rgba(0, 0, 0, 0.8);
 
 			.main-text {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
+				padding: 20px;
 				color: white;
+
+				h2{
+					margin-bottom: 10px;
+				}
 			}
 		}
-	}
-
-	.one {
-		background-image: url('/projekt/Zadanie/img/kawa.jpg');
-	}
-
-	.two {
-		background-image: url('/projekt/Zadanie/img/urząd.jpg');
-	}
-	.three {
-		background-image: url('/projekt/Zadanie/img/telefon.jpg');
 	}
 }
 
-.footer {
+.about-us-box {
 	position: relative;
-	height: 70px;
-	background-color: #333;
+    margin: 40px 0;
+	height: 300px;
+	background-attachment: fixed;
+	background-position: center;
+	border-top-left-radius: 50px;
+	border-bottom-right-radius: 50px;
+	overflow: hidden;
+}
 
-	p {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		color: white;
-		font-size: 20px;
 
-		.icon-box {
-			a {
-				color: #fff;
-				margin: 0 5px;
-				font-size: 30px;
-				transition: color 0.5;
-			}
-			a:hover {
-				color: royalblue;
-			}
-		}
-	}
+
+.middle {
+	background-image: url('/projekt/box/img/kawa.jpg');
+}
+
+.about-us-bg{
+    position: absolute;
+    bottom: 0;
+    height: 45%;
+    width: 100%;
+    background-color: rgba(0,0,0,.8);
+}
+
+.about-us-text {
+	position: absolute;
+    padding: 20px 40px;
+	bottom: 20px;
+	text-align: center;
+	color: #fff;
+
+}
+.about-us-text h3{
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
