--- a/projekt2/css/responsywan.css
+++ b/projekt2/css/responsywan.css
@@ -1,41 +1,139 @@
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
 body {
+  scroll-margin-top: 60px;
   font-family: "Montserrat", sans-serif;
 }
 
+section {
+  scroll-margin-top: 80px;
+}
+
+.container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
 .nav {
-  position: relative;
+  position: -webkit-sticky;
+  position: sticky;
   height: 60px;
-  background-color: rgb(216, 215, 215);
+  background-color: #ddd;
+  line-height: 60px;
+  text-align: center;
+  top: 0;
+  z-index: 20;
 }
-.nav .nav-link {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.nav .nav-link a {
-  margin: 0 20px;
-  font-weight: bold;
-  font-size: 20px;
-  color: #333;
-  text-decoration: none;
+.nav .burger-icon {
+  display: block;
+  margin-left: auto;
+  padding: 0 30px;
+  font-size: 30px;
+  line-height: 60px;
+  background: none;
+  border: none;
+  cursor: pointer;
   transition: color 0.3s;
 }
-.nav .nav-link a:hover {
+.nav .burger-icon:hover {
+  color: royalblue;
+}
+.nav .nav-item {
+  display: none;
+}
+.nav .nav-item .nav-link {
+  color: #333;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0 30px;
+  transition: color 0.3s;
+  text-decoration: none;
+}
+.nav .nav-item .nav-link:hover {
   color: royalblue;
 }
 
 .header .header-img {
-  height: 330px;
+  position: relative;
+  height: 490px;
   background-image: url("/projekt/responsywna/img/landscape-small.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.header .header-img .header-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 22px;
+}
+.header .header-img .header-text h1 {
+  text-shadow: 3px 3px 5px #000;
+  margin-bottom: 5px;
+}
+.header .header-img .header-text h1 span {
+  font-weight: bold;
+  color: #09f;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.header .header-img .header-shadow {
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.section-title {
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+}
+
+.products {
+  margin: 60px auto;
+}
+.products .products-box .main-img {
+  position: relative;
+  height: 300px;
   background-size: cover;
   background-position: center;
+  text-align: center;
+}
+.products .products-box .one {
+  background-image: url("/projekt/responsywna/img/chilidren-small.jpg");
+}
+.products .products-box .two {
+  background-image: url("/projekt/responsywna/img/keyboard-small.jpg");
+}
+.products .products-box .three {
+  background-image: url("/projekt/responsywna/img/laptop-small.jpg");
+}
+.products .products-box .four {
+  background-image: url("/projekt/responsywna/img/woman-small.jpg");
+}
+
+.main {
+  margin: 60px 0;
+}
+.main .about-us p {
+  margin-bottom: 10px;
+  padding: 0 20px;
+}
+
+@media (min-width: 768px) {
+  .nav .burger-icon {
+    display: none;
+  }
+  .nav .nav-item {
+    display: block;
+  }
 }/*# sourceMappingURL=responsywan.css.map */
