--- a/projekt2/css/style-box.css
+++ b/projekt2/css/style-box.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
@@ -14,9 +14,10 @@ body {
 .header .header-img {
   position: relative;
   height: 300px;
-  background-image: url("/projekt/box/img/mountains-190055_640.jpg");
+  width: auto;
+  background-image: url("/projekt/box/img/góry.jpg");
+  background-position: center;
   background-size: cover;
-  background-position: 0 50%;
 }
 .header .header-img .header-text {
   position: absolute;
@@ -24,58 +25,74 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  z-index: 1;
 }
-.header .header-img .header-text h1 {
-  font-size: 50px;
-  padding-bottom: 10px;
+.header .header-img .header-text .header-title {
   letter-spacing: 2px;
-  font-weight: bold;
+  margin-bottom: 10px;
 }
-.header .header-img .header-text p {
+.header .header-img .header-text .header-description {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-.header .header-img .header-bg {
-  position: absolute;
+.header .header-img .header-shadow {
   height: 100%;
-  width: 100%;
-  background-color: rgba(0, 3, 27, 0.4);
+  background: rgba(0, 0, 0, 0.3);
 }
 
-.nav {
+.nav .nav-space {
   height: 50px;
-  background-color: #333;
-  text-align: center;
   line-height: 50px;
+  text-align: center;
+  background-color: #333;
 }
-.nav .nav-item {
-  display: inline-block;
-}
-.nav .nav-item a {
+.nav .nav-space .nav-item .nav-link {
   padding: 0 50px;
-  color: white;
+  letter-spacing: 1px;
+  font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
-  font-weight: bold;
-  letter-spacing: 2px;
+  color: white;
   transition: color 0.3s;
 }
-.nav .nav-item a:hover {
+.nav .nav-space .nav-item .nav-link:hover {
   color: royalblue;
 }
 
 .main {
-  margin: 50px auto;
-  width: 1200px;
+  margin: 50px 70px;
   text-align: center;
 }
 .main h2 {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   text-transform: uppercase;
-  text-align: center;
 }
 .main .main-img {
+  position: relative;
+  height: 300px;
+  background-attachment: fixed;
+  background-image: url("/projekt/box/img/kawa.jpg");
+  background-position: center;
+  background-size: cover;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  overflow: hidden;
+}
+.main .main-img .main-shadow {
+  position: absolute;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+.main .main-img .main-shadow .main-text {
+  padding: 20px;
+  color: white;
+}
+.main .main-img .main-shadow .main-text h2 {
+  margin-bottom: 10px;
+}
+
+.about-us-box {
   position: relative;
   margin: 40px 0;
   height: 300px;
@@ -85,49 +102,29 @@ body {
   border-bottom-right-radius: 50px;
   overflow: hidden;
 }
-.main .main-img .main-bg {
+
+.middle {
+  background-image: url("/projekt/box/img/kawa.jpg");
+}
+
+.about-us-bg {
   position: absolute;
   bottom: 0;
   height: 45%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
 }
-.main .main-img .main-bg .main-text {
+
+.about-us-text {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-.main .one {
-  background-image: url("/projekt/Zadanie/img/kawa.jpg");
-}
-.main .two {
-  background-image: url("/projekt/Zadanie/img/urząd.jpg");
-}
-.main .three {
-  background-image: url("/projekt/Zadanie/img/telefon.jpg");
+  padding: 20px 40px;
+  bottom: 20px;
+  text-align: center;
+  color: #fff;
 }
 
-.footer {
-  position: relative;
-  height: 70px;
-  background-color: #333;
-}
-.footer p {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 20px;
-}
-.footer p .icon-box a {
-  color: #fff;
-  margin: 0 5px;
-  font-size: 30px;
-  transition: color 0.5;
-}
-.footer p .icon-box a:hover {
-  color: royalblue;
+.about-us-text h3 {
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }/*# sourceMappingURL=style-box.css.map */
