--- a/projekt/responsywna2/responsywan.scss
+++ b/projekt/responsywna2/responsywan.scss
@@ -6,13 +6,10 @@
 	margin: 0;
 }
 
-body {
-	scroll-margin-top: 60px;
 
-	font-family: 'Montserrat', sans-serif;
-}
-section {
-	scroll-margin-top: 80px;
+
+body {
+	font-family: 'Open Sans', sans-serif;
 }
 
 .container {
@@ -21,141 +18,132 @@ section {
 	max-width: 1200px;
 }
 
-.nav {
-	position: sticky;
+.section-title{
+	margin-bottom: 40px;
+	text-align: center;
+	text-transform: uppercase;
+
+}
+
+// nawigacja
+
+nav {
 	height: 60px;
 	background-color: #ddd;
-	line-height: 60px;
 	text-align: center;
-	top: 0;
-	z-index: 20;
 
 	.burger-icon {
 		display: block;
+		padding: 0 20px;
 		margin-left: auto;
-		padding: 0 30px;
-		font-size: 30px;
 		line-height: 60px;
 		background: none;
 		border: none;
-		cursor: pointer;
+		font-size: 30px;
 		transition: color 0.3s;
+		cursor: pointer;
 	}
-
 	.burger-icon:hover {
 		color: royalblue;
 	}
 
 	.nav-item {
 		display: none;
-		.nav-link {
-			color: #333;
-			text-transform: uppercase;
-			font-weight: bold;
-			margin: 0 30px;
-			transition: color 0.3s;
-			text-decoration: none;
-		}
-
-		.nav-link:hover {
-			color: royalblue;
-		}
 	}
 }
 
-.header {
+// header
+header {
 	.header-img {
 		position: relative;
-		height: 490px;
+		height: 400px;
 		background-image: url('/projekt/responsywna/img/landscape-small.jpg');
 		background-position: center;
 		background-size: cover;
+	}
 
-		.header-text {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			color: white;
-			font-size: 22px;
+	.header-text {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		color: white;
+		transform: translate(-50%, -50%);
+		font-size: 22px;
 
-			h1 {
-				text-shadow: 3px 3px 5px #000;
-				margin-bottom: 5px;
+		h1 {
+			text-shadow: 3px 3px 5px #000;
+			margin-bottom: 10px;
 
-				span {
-					font-weight: bold;
-					color: #09f;
-					text-transform: uppercase;
-					letter-spacing: 2px;
-				}
+			span {
+				text-transform: uppercase;
+				color: #09f;
 			}
 		}
 
-		.header-shadow {
-			height: 100%;
-			background: rgba(0, 0, 0, 0.6);
+		p {
+			letter-spacing: 2px;
 		}
 	}
-}
 
-.section-title {
-	margin-top: 50px;
-	margin-bottom: 20px;
-	text-transform: uppercase;
-	text-align: center;
-	font-weight: bold;
-}
-
-.products {
-	margin: 60px auto;
-	.products-box{
-		
-	.main-img {
-		position: relative;
-		height: 300px;
-		background-size: cover;
-		background-position: center;
-		text-align: center;
-	}
-
-	.one {
-		background-image: url('/projekt/responsywna/img/chilidren-small.jpg');
-	}
-
-	.two {
-		background-image: url('/projekt/responsywna/img/keyboard-small.jpg');
-	}
-
-	.three {
-		background-image: url('/projekt/responsywna/img/laptop-small.jpg');
-	}
-
-	.four {
-		background-image: url('/projekt/responsywna/img/woman-small.jpg');
+	.header-shadow {
+		height: 100%;
+		background: rgba(0, 0, 0, 0.6);
 	}
 }
-}
 
-.main {
-	margin: 60px 0;
+// main
 
-	.about-us {
-		p {
-			margin-bottom: 10px;
-			padding: 0 20px;
+main{
+	.about-us{
+
+		margin: 40px auto;
+
+		p{
+			padding-bottom: 10px;
+		}
+	}
+
+	.product{
+		.hero-bg{
+			position: relative;
+			height: 300px;
+			background-size: cover;
+			background-position: center;
+			text-align: center;
+		}
+
+		.first-product{
+			background-image: url('/projekt/responsywna/img/chilidren-small.jpg');
+		}
+
+		.second-product{
+			background-image: url('/projekt/responsywna/img/woman-small.jpg');
+
 		}
 	}
 }
 
 @media (min-width: 768px) {
-	.nav {
+	nav {
 		.burger-icon {
 			display: none;
 		}
-
 		.nav-item {
 			display: block;
+		}
+
+		a {
+			padding: 0 40px;
+			color: #333;
+			text-transform: uppercase;
+			line-height: 60px;
+			font-weight: bold;
+			text-decoration: none;
+			transition: color 0.3s;
+		}
+
+		a:hover {
+			color: royalblue;
 		}
 	}
 }
