--- a/projekt2/css/main.css
+++ b/projekt2/css/main.css
@@ -1,59 +1,80 @@
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 body {
-  font-family: sans-serif;
-}
-
-html {
-  font-size: 10px;
-}
-
-h1 {
-  font-size: 3rem;
-  color: gold;
-}
-
-h2 {
-  font-size: 2.4rem;
-  color: gold;
-}
-
-h3 {
-  font-size: 1.8rem;
-  color: gold;
-}
-
-p {
-  font-size: 1.6rem;
+  margin: 50px;
+  font-family: "Montserrat", sans-serif;
+  background-color: #333;
+  font-size: 40px;
 }
 
 section {
-  height: 25vh;
+  display: flex;
+  margin: 20px 0;
+  height: 300px;
+  border: 5px solid black;
+}
+
+.square {
+  width: 200px;
   text-align: center;
 }
 
-div {
-  width: 100px;
-  height: 100px;
-  margin: 30px auto;
-  background-color: lime;
-  border: 3px solid black;
-  border-radius: 50%;
-}
-
-.odd {
-  background-color: dodgerblue;
-}
-
-.even {
-  background-color: deepskyblue;
-}
-
 .one {
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  background-color: gold;
+}
+
+.two {
+  background-color: lime;
+}
+
+.three {
+  background-color: royalblue;
+}
+
+.four {
+  background-color: tomato;
+}
+
+.first {
+  flex-direction: column;
+}
+.first .two {
+  flex-grow: 1;
+}
+.first .four {
+  flex-grow: 1;
+}
+
+.second {
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.third .one {
+  flex-grow: 1;
+}
+.third .two {
+  order: -1;
+}
+.third .four {
+  order: -2;
+  flex-grow: 3;
+}
+.third .three {
+  order: -3;
+}
+
+.fourth {
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+.fourth .two {
+  align-self: flex-start;
+}
+.fourth .three {
+  align-self: center;
 }/*# sourceMappingURL=main.css.map */
