--- a/projekt2/css/main.css
+++ b/projekt2/css/main.css
@@ -1,63 +1,62 @@
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 50px;
-  font-family: "Montserrat", sans-serif;
-  background-color: #333;
-  font-size: 40px;
+  font-family: sans-serif;
+}
+
+html {
+  font-size: 10px;
+}
+
+h1 {
+  font-size: 3rem;
+  color: gold;
+}
+
+h2 {
+  font-size: 2.4rem;
+  color: gold;
+}
+
+h3 {
+  font-size: 1.8rem;
+  color: gold;
+}
+
+p {
+  font-size: 1.6rem;
 }
 
 section {
-  display: flex;
-  margin: 20px 0;
-  height: 300px;
-  border: 5px solid black;
-}
-
-.square {
-  width: 200px;
+  height: 25vh;
   text-align: center;
 }
 
-.one {
-  background-color: gold;
-}
-
-.two {
+div {
+  width: 100px;
+  height: 100px;
+  margin: 30px auto;
   background-color: lime;
+  border: 3px solid black;
+  border-radius: 50%;
 }
 
-.three {
-  background-color: royalblue;
+.odd {
+  background-color: dodgerblue;
 }
 
-.four {
-  background-color: tomato;
+.even {
+  background-color: deepskyblue;
 }
 
-.first {
-  flex-direction: column;
-}
-.first .two {
-  flex-grow: 1;
-}
-.first .four {
-  flex-grow: 1;
-}
-
-.second {
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.third .one {
-  flex-grow: 1;
-}
-.third .two {
+.one {
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}/*# sourceMappingURL=main.css.map */rd .two {
   order: -1;
 }
 .third .four {
